@@ -4,7 +4,7 @@ from RepSys.command import *
 import getopt
 import sys
 
-VERSION="1.8"
+VERSION="1.8dev1.9"
 
 HELP = """\
 Usage: repsys COMMAND [COMMAND ARGUMENTS]
